<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RS485Startup_State" Id="{41ea5205-67f8-488e-afe5-526aff68a949}">
    <Declaration><![CDATA[TYPE ST_RS485Startup_State :
STRUCT
	bBusOk					:BOOL;
	bStartupError			:BOOL;
	sStartupState			:STRING;
	bStartupDone			:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>